<resources>
    <string name="app_name">Receptes_Plepis_Silins</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="intro">You need an account to enter</string>
    <string name="katalog">Katalogs</string>
    <string name="par_mums">Par mums</string>
    <string name="konts">Konts</string>
    <string name="pievienot_recepti">pievienot recepti</string>
    <string name="lietotnes_nosaukums">Lietotnes nosaukums</string>
    <string name="login">Login</string>
    <string name="atpaka">Atpakaļ</string>
    <string name="lietotajvards">Lietotājvārds</string>
    <string name="ievadiet_paroli">Ievadiet paroli</string>
    <string name="ievadiet_lietotajvardu">Ievadiet lietotājvārdu</string>
    <string name="apstipriniet_paroli">Apstipriniet paroli</string>
    <string name="parole">Parole</string>
    <string name="apstiprinat_paroli">Apstiprināt paroli</string>
    <string name="meatballs">Meatballs</string>
    <string name="atpakal">Atpakaļ</string>
    <string name="aboutMyself">Es esmu Romāns un (programmas nosaukms) tā ir mana lietotne, kur es dalos ar visādiem receptēm!</string>
    <string name="es">Es</string>
    <string name="aboutme">Es esmu Romāns un (programmas nosaukums), tā ir mana lietotne, kur es dalos ar visādiem receptēm!</string>
    <string name="Parmani">Es dzīvoju Latvijā, Daugavpilī un man nepatīk tāds ēdiens, kā \'FastFood\', jo tie nav īpsaši garšīgi un ir ļoti trekni.</string>
    <string name="receptes">Manas receptes</string>
    <string name="about_reciepes">Mana lietotne atspoguļo manu filozofiju par ēdienu un tā gatavošanu – ātri, radoši, gudri un svaigi.\n\nTās ir ātras maltītes aizņemtām darba dienu vakariem.\n\nRadošas jaunas idejas un svaigi skatījumi uz iecienītākajiem ēdieniem, lai ātri pagatavotu ēdienu, samazinātu izmaksas un radītu ēdienu ar stilu.\n\nGudra ēdiena gatavošana, lai neupurētu garšu tikai tāpēc, ka jums ir maz laika un budžeta. Es jums parādīšu, kā iegūt gardēžu garšas no budžeta sastāvdaļām un kā jūs varat organizēties, lai būtu viegli pasniegt ģimenei barojošas maltītes, kas viņus pārsteigs.</string>
    <string name="aboutreciepes2">Manas receptes ir izmaksu ziņā apzinīgas, gatavotas, izmantojot ikdienas sastāvdaļas, un (lielākoties) diezgan veselīgas. Es neizmantoju krējuma burciņu vai krējuma siera blokus katrā mērcē, un fritēju tikai tad, kad tiešām domāju, ka tas ir tā vērts.\n\nTaču dažreiz jūtu nepieciešamību atbrīvot iekšējo dēmonu.</string>
    <string name="kolegis">Mans Kolēgis</string>
    <string name="aboutKolegis">Es esmu Rainers, man arī pieder (programmas nosaukums) lietotne, kur ir saistīta ar gatavošanu un recepšu radīšanu!</string>
    <string name="myreciepes2">Manas receptes</string>
    <string name="myreciepe_kolega">Lūk, lieliska jūras velšu zupa, kas pilna ar jūras veltēm, maigiem kartupeļiem, burkāniem un saldo kukurūzu. Krēmīgajam zupas buljonam piemīt jūras velšu garša, un recepte ir veidota tā, lai tā būtu saudzīga gan jūsu laikam, gan maciņam. Tā ir vienkārši lieliska!</string>
    <string name="aboutKolega">Es dzīvoju Latvijā, Daugavpilī.\nMan patīk salds krēms \'Kārums\' ar šokolādes garšu, bet desserti, ka tortes arī, jo viņi ir saldi un tie ir viegli pagatavojamie.</string>
    <string name="manasreceptes_kolega">Manas receptes</string>
    <string name="manareceptes_kolega">Lūk, lieliska jūras velšu zupa, kas pilna ar jūras veltēm, maigiem kartupeļiem, burkāniem un saldo kukurūzu. Krēmīgajam zupas buljonam piemīt jūras velšu garša, un recepte ir veidota tā, lai tā būtu saudzīga gan jūsu laikam, gan maciņam. Tā ir vienkārši lieliska!</string>
    <string name="myreciepe_kolega2">Iespējams, esat redzējuši dārzeņu tianus, kas sakārtoti skaistās spirālēs ar perfekti saskaņotiem dārzeņu apļiem. Tie izskatās satriecoši, taču patiesībā nav iespējams atrast baklažānus, cukīni un tomātus, kas visi ir vienāda izmēra. Manuprāt, glīts rindu izkārtojums taisnstūrveida traukā šķiet daudz loģiskāks.\n\nTie joprojām izskatās skaisti uz galda, taču tos ir daudz vieglāk salikt kopā, un tie ir daudz piedodošāki, ja dārzeņi nav perfekti saskaņoti.</string>
    <string name="mans_konts">Mans konts</string>
    <string name="atpakal_uz_majaslapu">Atpakaļ</string>
    <string name="meatballs_diens">Meatballs ēdiens</string>
    <string name="meatballs_ediens">meatballs_ediens</string>
    <string name="register">Reģistrēties</string>
</resources>