<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/katalogs2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@color/buttonBackgroundFirstView"
        android:text="@string/katalog"
        android:textColor="@color/whiteText"
        app:layout_constraintEnd_toStartOf="@+id/par_mums2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/par_mums2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/buttonBackgroundFirstView"
        android:text="@string/par_mums"
        android:textColor="@color/whiteText"
        app:layout_constraintEnd_toStartOf="@+id/konts2"
        app:layout_constraintStart_toEndOf="@+id/katalogs2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/konts2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@color/buttonBackgroundFirstView"
        android:text="@string/konts"
        android:textColor="@color/whiteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/par_mums2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>